# Trading-Bot

./: .env.example  .gitignore  README.md  cli.py  pyproject.toml
bot/: client.py  logger.py  orders.py  validators.py
